# PySide6-SiliconUI

./: README.md  pyproject.toml  setup.py
docs/: MIGRATION_SUMMARY.md  PYSIDE6_MIGRATION.md  PYSIDE6_MIGRATION_zh.md  README_zh.md
examples/Gallery for siui/: start.py  test_new_button.py  ui.py
examples/Gallery for siui/components/option_card/: plane.py
examples/Gallery for siui/components/page_about/: page_about.py
examples/Gallery for siui/components/page_container/: page_container.py
examples/Gallery for siui/components/page_dialog/: page_dialog.py
examples/My-TODOs/: start.py  ui.py
examples/button/: demo_button.py
siui/: typing.py
siui/components/: button.py  chart.py  combobox_.py  container.py  editbox.py  graphic.py  label.py  layout.py  menu_.py  popover.py  progress_bar_.py  slider_.py
siui/components/combobox/: combobox.py
siui/components/menu/: menu.py  option.py
siui/components/option_card/: option_card.py
siui/components/page/: child_page.py  page.py
siui/components/progress_bar/: progress_bar.py
siui/components/slider/: slider.py
siui/components/spinbox/: spinbox.py
siui/components/titled_widget_group/: titled_widget_group.py
siui/components/tooltip/: tooltip.py
siui/components/widgets/: button.py  container.py  expands.py  label.py  line_edit.py  navigation_bar.py  timedate.py  timeline.py
siui/core/: alignment.py  animation.py  effect.py  event_filter.py  globals.py  painter.py  token.py
siui/gui/: font.py
siui/gui/icons/: parser.py
siui/templates/application/: application.py
(+35 files in other folders)
